2008-06-06  Ross Burton  <ross@burtonini.com>

	* gtk/gtkwindow.c:
	Fix trivial typo in documentation.

2008-06-06  Tor Lillqvist  <tml@novell.com>

	* config.h.win32.in: Slight update to match what configure
	produces.

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkbuilder.h (enum): Add the new version mismatch error
	constant to the end of the list, to avoid breaking the stable ABI

2008-06-05  Michael Natterer  <mitch@imendio.com>

	* configure.in: add -DATK_DISABLE_SINGLE_INCLUDES to CPPFLAGS.

2008-06-05  Li Yuan  <li.yuan@sun.com>

	* gail-uninstalled.pc.in:
	Bug #536430. Patch from Damien Carbery <damien.carbery@sun.com>.
	Correct paths to gail headers and libraries in gail-uninstalled.pc.in.

2008-06-03  Matthias Clasen  <mclasen@redhat.com>

	* docs/RELEASE-HOWTO: Update a bit

2008-06-03  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.2 ===

2008-06-03  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtkfilechooserentry.c (install_completion_feedback_timer):
	If the user presses Tab while the completion feedback window is
	active, then we'll assert.  Remove the assertion and just re-set
	the timer.  Fixes https://bugzilla.novell.com/show_bug.cgi?id=355225

2008-06-03  Colin Walters  <walters@redhat.com>
	
	Bug 535303 – add _get_implementation to GtkStatusIcon

	* gtk/gtkstatusicon.c (gtk_status_icon_get_x11_window_id): New
	function to retrieve internal X11 window ID, useful for libnotify.
	* gtk/gtkstatusicon.h: Prototype it.
	* docs/reference/gtk/gtk-sections.txt: Add to docs.
	* gtk/gtk.symbols: Export it.

2008-06-03  Tor Lillqvist  <tml@novell.com>

	* gtk/updateiconcache.c (build_cache): Use g_open().

2008-06-03  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkclist.h
	* gtk/gtkctree.h: revert includes to how they have been before the
	GTK_DISABLE_SINGLE_INCLUDES changes. Apparently I missed the fact
	that you can't include <gtk/gtk.h> from two headers where one is a