@@ -1677,6 +1677,9 @@ else
 fi
 
 GTK_PACKAGES="atk cairo gio-2.0"
+if test "x$gdktarget" = "xx11"; then
+  GTK_PACKAGES="$GTK_PACKAGES pangoft2"
+fi
 GTK_EXTRA_LIBS=
 GTK_EXTRA_CFLAGS= 
 GTK_DEP_LIBS="$GDK_EXTRA_LIBS $GTK_DEP_LIBS_FOR_X `$PKG_CONFIG --libs $GDK_PIXBUF_PACKAGES $PANGO_PACKAGES $GTK_PACKAGES_FOR_X $GTK_PACKAGES` $GTK_EXTRA_LIBS $GDK_PIXBUF_EXTRA_LIBS"
